# minecraft-server

./: README.md
ops/: README.md  pyproject.toml
ops/src/: core.py
ops/src/auto/: shutdown.py
ops/tests/: __main__.py
