[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mcops"
description = "Minecraft Server Operations"
requires-python = ">=3.9"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy"
]
dependencies = [
    "mcrcon"
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "flake8",
    "isort"
]
openai = [
    "openai",
    "tiktoken"
]

[tool.setuptools]
package-dir = { mcops = "src" }

[tool.setuptools.dynamic]
version = { attr = "src.__version__" }
